confirmation panel added